[package]
name = "betteruptime-heartbeat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Better Uptime heartbeat monitoring client for Rust services"
repository = "https://github.com/thunderwind-io/rust-betteruptime-heartbeat"
keywords = ["monitoring", "heartbeat", "betteruptime", "uptime"]
categories = ["network-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
serial_test = "3"

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
